# ncdb-view

./: .gitignore  README.md  pyproject.toml
ncdb_view/: app.py  cli.py
ncdb_view/static/: app.js  index.html
